lib/multichannel_capture_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for `src/multichannel_capture.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class MultichannelCaptureBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  MultichannelCaptureBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  MultichannelCaptureBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// A very short-lived native function.
  ///
  /// For very short-lived functions, it is fine to call them on the main isolate.
  /// They will block the Dart execution while running the native function, so
  /// only do this for native functions which are guaranteed to be short-lived.
  int sum(int a, int b) {
    return _sum(a, b);
  }

  late final _sumPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>('sum');
  late final _sum = _sumPtr.asFunction<int Function(int, int)>();

  /// A longer lived native function, which occupies the thread calling it.
  ///
  /// Do not call these kind of native functions in the main isolate. They will
  /// block Dart execution. This will cause dropped frames in Flutter applications.
  /// Instead, call these native functions on a separate isolate.
  int sum_long_running(int a, int b) {
    return _sum_long_running(a, b);
  }

  late final _sum_long_runningPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
        'sum_long_running',
      );
  late final _sum_long_running = _sum_long_runningPtr
      .asFunction<int Function(int, int)>();

  /// Returns the version string of the bundled miniaudio library, e.g. "0.11.25".
  ///
  /// Smoke test confirming the miniaudio backend is compiled and linked. The
  /// returned pointer is static storage owned by miniaudio; do not free it.
  ffi.Pointer<ffi.Char> mc_version() {
    return _mc_version();
  }

  late final _mc_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'mc_version',
      );
  late final _mc_version = _mc_versionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// (Re)enumerate input (capture) devices into an internal cache. Returns the
  /// number of devices found, or -1 on error. Call before the accessors below,
  /// and again to refresh after hardware changes.
  int mc_refresh_input_devices() {
    return _mc_refresh_input_devices();
  }

  late final _mc_refresh_input_devicesPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'mc_refresh_input_devices',
      );
  late final _mc_refresh_input_devices = _mc_refresh_input_devicesPtr
      .asFunction<int Function()>();

  /// Number of input devices from the last mc_refresh_input_devices() call.
  int mc_input_device_count() {
    return _mc_input_device_count();
  }

  late final _mc_input_device_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('mc_input_device_count');
  late final _mc_input_device_count = _mc_input_device_countPtr
      .asFunction<int Function()>();

  /// Name of the input device at `index`, or NULL if out of range. Owned by the
  /// native side; copy it, do not free it.
  ffi.Pointer<ffi.Char> mc_input_device_name(int index) {
    return _mc_input_device_name(index);
  }

  late final _mc_input_device_namePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int)>>(
        'mc_input_device_name',
      );
  late final _mc_input_device_name = _mc_input_device_namePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  /// Whether the input device at `index` is the system default (1) or not (0).
  int mc_input_device_is_default(int index) {
    return _mc_input_device_is_default(index);
  }

  late final _mc_input_device_is_defaultPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'mc_input_device_is_default',
      );
  late final _mc_input_device_is_default = _mc_input_device_is_defaultPtr
      .asFunction<int Function(int)>();

  /// Native channel count of the input device at `index`, or -1 on error.
  /// 0 means miniaudio reports "all channel counts supported".
  int mc_input_device_channels(int index) {
    return _mc_input_device_channels(index);
  }

  late final _mc_input_device_channelsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'mc_input_device_channels',
      );
  late final _mc_input_device_channels = _mc_input_device_channelsPtr
      .asFunction<int Function(int)>();

  /// Open the input device at `device_index` (or the system default if out of
  /// range / negative) and start capturing interleaved 32-bit float PCM. Pass 0
  /// for sample_rate/channels to accept the device's native values. Returns 0 on
  /// success, -1 on error. Enumerate first to select a device by index.
  int mc_start_capture(
    int device_index,
    int sample_rate,
    int channels,
    mc_data_ready_callback on_data_ready,
  ) {
    return _mc_start_capture(
      device_index,
      sample_rate,
      channels,
      on_data_ready,
    );
  }

  late final _mc_start_capturePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Int, ffi.Int, ffi.Int, mc_data_ready_callback)
        >
      >('mc_start_capture');
  late final _mc_start_capture = _mc_start_capturePtr
      .asFunction<int Function(int, int, int, mc_data_ready_callback)>();

  /// Drain up to `max_frames` of captured audio into `out_buffer` (interleaved
  /// f32; must hold max_frames * channels floats). Returns frames written, or -1
  /// if not capturing.
  int mc_read_frames(ffi.Pointer<ffi.Float> out_buffer, int max_frames) {
    return _mc_read_frames(out_buffer, max_frames);
  }

  late final _mc_read_framesPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Float>, ffi.Int)>
      >('mc_read_frames');
  late final _mc_read_frames = _mc_read_framesPtr
      .asFunction<int Function(ffi.Pointer<ffi.Float>, int)>();

  /// Timed peer of mc_read_frames: drains the SAME PCM ring, and additionally
  /// reports the host-clock time of the FIRST frame in the returned batch plus that
  /// frame's cumulative index since capture start.
  ///
  /// `*out_host_time` is in RAW mach host-time units (the value mach_absolute_time()
  /// returns — the same clock CMClockGetHostTimeClock stamps video PTS on; feed it to
  /// CMClockMakeHostTimeFromSystemUnits, do NOT assume nanoseconds). `*out_first_frame_index`
  /// is the cumulative count of frames DELIVERED before this batch (monotonic,
  /// continuous, never skips — a drop puts no hole in it; drops surface via
  /// mc_capture_dropped_frames). Both out-params are written only when the return
  /// value is > 0. Returns frames written, or -1 if not capturing.
  ///
  /// This reader assumes it is the sole drainer of the ring for the session (the Dart
  /// layer enforces one active stream per capture). Do NOT interleave it with
  /// mc_read_frames on the same session, or the delivered index desyncs.
  int mc_read_frames_timed(
    ffi.Pointer<ffi.Float> out_buffer,
    int max_frames,
    ffi.Pointer<ffi.Uint64> out_host_time,
    ffi.Pointer<ffi.Uint64> out_first_frame_index,
  ) {
    return _mc_read_frames_timed(
      out_buffer,
      max_frames,
      out_host_time,
      out_first_frame_index,
    );
  }

  late final _mc_read_frames_timedPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Float>,
            ffi.Int,
            ffi.Pointer<ffi.Uint64>,
            ffi.Pointer<ffi.Uint64>,
          )
        >
      >('mc_read_frames_timed');
  late final _mc_read_frames_timed = _mc_read_frames_timedPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Float>,
          int,
          ffi.Pointer<ffi.Uint64>,
          ffi.Pointer<ffi.Uint64>,
        )
      >();

  /// Cumulative count of frames the device delivered that were DROPPED because the
  /// PCM ring was full, since capture start. 0 in a healthy session. A muxer can
  /// insert exactly this much silence to keep audio length == wall-clock length.
  int mc_capture_dropped_frames() {
    return _mc_capture_dropped_frames();
  }

  late final _mc_capture_dropped_framesPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function()>>(
        'mc_capture_dropped_frames',
      );
  late final _mc_capture_dropped_frames = _mc_capture_dropped_framesPtr
      .asFunction<int Function()>();

  /// Stop capturing and release the device + ring buffer. Returns 0.
  int mc_stop_capture() {
    return _mc_stop_capture();
  }

  late final _mc_stop_capturePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('mc_stop_capture');
  late final _mc_stop_capture = _mc_stop_capturePtr
      .asFunction<int Function()>();

  /// Actual channel count of the running capture, or 0 if not capturing.
  int mc_capture_channels() {
    return _mc_capture_channels();
  }

  late final _mc_capture_channelsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('mc_capture_channels');
  late final _mc_capture_channels = _mc_capture_channelsPtr
      .asFunction<int Function()>();

  /// Actual sample rate of the running capture, or 0 if not capturing.
  int mc_capture_sample_rate() {
    return _mc_capture_sample_rate();
  }

  late final _mc_capture_sample_ratePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('mc_capture_sample_rate');
  late final _mc_capture_sample_rate = _mc_capture_sample_ratePtr
      .asFunction<int Function()>();
}

typedef mc_data_ready_callbackFunction = ffi.Void Function();
typedef Dartmc_data_ready_callbackFunction = void Function();

/// Notification invoked from the audio thread when captured frames are
/// available to drain. On the Dart side this is a NativeCallable.listener.
typedef mc_data_ready_callback =
    ffi.Pointer<ffi.NativeFunction<mc_data_ready_callbackFunction>>;
